<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_rate"
        android:title="@string/action_rate"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>